<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:id="@+id/dialog_register"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorSubPrimary"
        android:text="@string/register_dialog_title"
        android:textSize="24dp"
        android:padding="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorSubPrimaryWithOpacity">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login_text"
            android:textColorHint="@color/colorSubPrimary"
            android:textColor="@color/colorSubPrimary"
            android:id="@+id/dialog_login" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorSubPrimaryWithOpacity">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_text"
            android:inputType="textPassword"
            android:textColorHint="@color/colorSubPrimary"
            android:textColor="@color/colorSubPrimary"
            android:id="@+id/dialog_password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorSubPrimaryWithOpacity">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_re_password_text"
            android:textColorHint="@color/colorSubPrimary"
            android:textColor="@color/colorSubPrimary"
            android:id="@+id/dialog_re_password" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorSubPrimaryWithOpacity">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name_text"
            android:textColorHint="@color/colorSubPrimary"
            android:textColor="@color/colorSubPrimary"
            android:id="@+id/dialog_name" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/btn_dialog_cancel"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorSubPrimary"/>
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:id="@+id/btn_dialog_auth"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorSubPrimary"/>
    </LinearLayout>

</LinearLayout>